--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,10 @@ html
 	head
 		meta(charset='utf-8')
 		
-		title reveal.js - The HTML Presentation Framework
+		title #{meta.title}
 		
-		meta(name='description', content='A framework for easily creating beautiful presentations using HTML')
-		meta(name='author', content='Hakim El Hattab')
+		meta(name='description', content=meta.description)
+		meta(name='author', content=meta.author)
 		meta(name='apple-mobile-web-app-capable', content='yes')
 		meta(name='apple-mobile-web-app-status-bar-style', content='black-translucent')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui')
