Remove unnecessary plugins and stuff

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,11 +40,8 @@ html
 						- })
 				- })
 		
-		script(src='js/head.min.js')
-		
+		- //script(src='js/head.min.js')
 		script(src='js/reveal.js')
-		
-		- console.log(revealjs)
 		script.
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
