Fix: New User Start Page (Now the currend page)

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,4 +11,4 @@ block revealPresentation
 			- })
 	script.
 		var revealPresentation = Reveal.initialize(!{JSON.stringify(config.revealjs)})
-	script(src="plugin/remoteControl/remoteControl.js")
+	script(src="js/remoteControl.js")
