--- a/views/moderator.jade
+++ b/views/moderator.jade
@@ -16,4 +16,4 @@ block revealPresentation
 			- })
 	script.
 		var revealPresentation = Reveal.initialize(!{JSON.stringify(config.revealjsMod)})
-	script(src="plugin/remoteControl/remoteControl.js")
+	script(src="js/remoteControl.js")
